--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-dnd": "^3.0.2",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
